--- a/Abstract_Factory.ipynb
+++ b/Abstract_Factory.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "***1)Abstract Method: Creación de distintos animales.***\n",
     "\n",
-    "***2)Strategy: Creación de disntintas razas de perros, tipos de tigres, razas de caballos***\n",
+    "***2)Strategy: Creación de distintas razas de perros, tipos de tigres, razas de caballos***\n",
     "\n",
     "\n",
     "***Vehículos*** \n",
@@ -276,7 +276,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Ruby 2.6.3",
+   "display_name": "Ruby 2.7.0",
    "language": "ruby",
    "name": "ruby"
   },
@@ -284,7 +284,7 @@
    "file_extension": ".rb",
    "mimetype": "application/x-ruby",
    "name": "ruby",
-   "version": "2.6.3"
+   "version": "2.7.0"
   }
  },
  "nbformat": 4,
