--- a/Composite.ipynb
+++ b/Composite.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -192,11 +192,267 @@
    "source": [
     "![composite2.png](attachment:composite2.png)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**OTRO EJEMPLO**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Definimos la clase `Component`, como una clase abstracta, donde se detallan los métodos que tendrán como base los herederos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       ":operation"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The base Component class declares common operations for both simple and\n",
+    "# complex objects of a composition.\n",
+    "class Component\n",
+    "    # @return [Component]\n",
+    "    def parent\n",
+    "      @parent\n",
+    "    end\n",
+    "  \n",
+    "    # Optionally, the base Component can declare an interface for setting and\n",
+    "    # accessing a parent of the component in a tree structure. It can also provide\n",
+    "    # some default implementation for these methods.\n",
+    "    def parent=(parent)\n",
+    "      @parent = parent\n",
+    "    end\n",
+    "  \n",
+    "    # In some cases, it would be beneficial to define the child-management\n",
+    "    # operations right in the base Component class. This way, you won't need to\n",
+    "    # expose any concrete component classes to the client code, even during the\n",
+    "    # object tree assembly. The downside is that these methods will be empty for\n",
+    "    # the leaf-level components.\n",
+    "    def add(component)\n",
+    "      raise NotImplementedError, \"#{self.class} has not implemented method '#{__method__}'\"\n",
+    "    end\n",
+    "  \n",
+    "    # @abstract\n",
+    "    #\n",
+    "    # @param [Component] component\n",
+    "    def remove(component)\n",
+    "      raise NotImplementedError, \"#{self.class} has not implemented method '#{__method__}'\"\n",
+    "    end\n",
+    "  \n",
+    "    # You can provide a method that lets the client code figure out whether a\n",
+    "    # component can bear children.\n",
+    "    def composite?\n",
+    "      false\n",
+    "    end\n",
+    "  \n",
+    "    # The base Component may implement some default behavior or leave it to\n",
+    "    # concrete classes (by declaring the method containing the behavior as\n",
+    "    # \"abstract\").\n",
+    "    def operation\n",
+    "      raise NotImplementedError, \"#{self.class} has not implemented method '#{__method__}'\"\n",
+    "    end\n",
+    "  end\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Luego definimos las clases que heredarán de la clase `Component`, las cuales serán:\n",
+    "\n",
+    "`Composite`: Será la clase encargada de poseer todos los elementos que tengan sub-elementos, es decir, se utilizará para todos los componentes que **no** sean hojas\n",
+    "\n",
+    "`Leaf`: Será la clase hoja que no posee subcomponetes, es decir, representa la parte inferior del árbol de composiciones."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       ":operation"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "  # The Composite class represents the complex components that may have children.\n",
+    "  # Usually, the Composite objects delegate the actual work to their children and\n",
+    "  # then \"sum-up\" the result.\n",
+    "  class Composite < Component\n",
+    "    def initialize\n",
+    "      @children = []\n",
+    "    end\n",
+    "  \n",
+    "    # A composite object can add or remove other components (both simple or\n",
+    "    # complex) to or from its child list.\n",
+    "  \n",
+    "    # @param [Component] component\n",
+    "    def add(component)\n",
+    "      @children.append(component)\n",
+    "      component.parent = self\n",
+    "    end\n",
+    "  \n",
+    "    # @param [Component] component\n",
+    "    def remove(component)\n",
+    "      @children.remove(component)\n",
+    "      component.parent = nil\n",
+    "    end\n",
+    "  \n",
+    "    # @return [Boolean]\n",
+    "    def composite?\n",
+    "      true\n",
+    "    end\n",
+    "  \n",
+    "    # The Composite executes its primary logic in a particular way. It traverses\n",
+    "    # recursively through all its children, collecting and summing their results.\n",
+    "    # Since the composite's children pass these calls to their children and so\n",
+    "    # forth, the whole object tree is traversed as a result.\n",
+    "    def operation\n",
+    "      results = []\n",
+    "      @children.each { |child| results.append(child.operation) }\n",
+    "      \"Branch(#{results.join('+')})\"\n",
+    "    end\n",
+    "  end\n",
+    "\n",
+    "\n",
+    "\n",
+    "  # The Leaf class represents the end objects of a composition. A leaf can't have\n",
+    "  # any children.\n",
+    "  #\n",
+    "  # Usually, it's the Leaf objects that do the actual work, whereas Composite\n",
+    "  # objects only delegate to their sub-components.\n",
+    "  class Leaf < Component\n",
+    "    # return [String]\n",
+    "    def operation\n",
+    "      'Leaf'\n",
+    "    end\n",
+    "  end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finalmente, definiremos las funciones `client_code`, las cuales interactuarán con la estructura que definimos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       ":client_code2"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " # The client code works with all of the components via the base interface.\n",
+    "  def client_code(component)\n",
+    "    puts \"RESULT: #{component.operation}\"\n",
+    "  end\n",
+    "  \n",
+    "  # Thanks to the fact that the child-management operations are declared in the\n",
+    "  # base Component class, the client code can work with any component, simple or\n",
+    "  # complex, without depending on their concrete classes.\n",
+    "  def client_code2(component1, component2)\n",
+    "    component1.add(component2) if component1.composite?\n",
+    "  \n",
+    "    print \"RESULT: #{component1.operation}\"\n",
+    "  end\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Poblamos las funciones he interactuamos con los componentes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Client: I've got a simple component:\n",
+      "RESULT: Leaf\n",
+      "\n",
+      "\n",
+      "Client: Now I've got a composite tree:\n",
+      "RESULT: Branch(Branch(Leaf+Leaf)+Branch(Leaf))\n",
+      "\n",
+      "\n",
+      "Client: I don't need to check the components classes even when managing the tree:\n",
+      "RESULT: Branch(Branch(Leaf+Leaf)+Branch(Leaf)+Leaf)"
+     ]
+    }
+   ],
+   "source": [
+    "  # This way the client code can support the simple leaf components...\n",
+    "  simple = Leaf.new\n",
+    "  puts 'Client: I\\'ve got a simple component:'\n",
+    "  client_code(simple)\n",
+    "  puts \"\\n\"\n",
+    "  \n",
+    "  # ...as well as the complex composites.\n",
+    "  tree = Composite.new\n",
+    "  \n",
+    "  branch1 = Composite.new\n",
+    "  branch1.add(Leaf.new)\n",
+    "  branch1.add(Leaf.new)\n",
+    "  \n",
+    "  branch2 = Composite.new\n",
+    "  branch2.add(Leaf.new)\n",
+    "  \n",
+    "  tree.add(branch1)\n",
+    "  tree.add(branch2)\n",
+    "  \n",
+    "  puts 'Client: Now I\\'ve got a composite tree:'\n",
+    "  client_code(tree)\n",
+    "  puts \"\\n\"\n",
+    "  \n",
+    "  puts 'Client: I don\\'t need to check the components classes even when managing the tree:'\n",
+    "  client_code2(tree, simple)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Ruby 2.6.3",
+   "display_name": "Ruby 2.7.0",
    "language": "ruby",
    "name": "ruby"
   },
@@ -204,7 +460,7 @@
    "file_extension": ".rb",
    "mimetype": "application/x-ruby",
    "name": "ruby",
-   "version": "2.6.3"
+   "version": "2.7.0"
   }
  },
  "nbformat": 4,
